--- a/denima_coming_soon/index.html
+++ b/denima_coming_soon/index.html
@@ -79,7 +79,7 @@
 </head>
 <body>
     <div id="main" >
-        <img src="logo.png" alt="Logo Image">
+        <img src="site-logo.ico" alt="Logo Image">
         <h1>دنیما | Denima</h1>
         <h2>در حال حاضر در حال توسعه سایت هستیم</h2>
         <div id="progress"><div id="fill"><div id="barpercent"><h3>20%</h3></div></div></div>
